--- a/apps/quill-frontend/src/app/global.css
+++ b/apps/quill-frontend/src/app/global.css
@@ -1,10 +1,13 @@
 html {
-  font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont,
-    Segoe UI, Roboto, Helvetica Neue, Arial, Noto Sans, sans-serif,
-    Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
-  scroll-behavior: smooth;
+    font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont,
+      Segoe UI, Roboto, Helvetica Neue, Arial, Noto Sans, sans-serif,
+      Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
+    scroll-behavior: smooth;
 }
 * {
-  margin: 0;
-  padding:0;
+    margin: 0;
+    padding:0;
+}
+body {
+    background:#eeebd5;
 }
